--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ yarn-debug.log*
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
+
+/config/initializers/simple_form_bootstrap.rb
+
