--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,4 +4,10 @@ AllCops:
     - 'node_modules/**/*'
 
 Metrics/LineLength:
-  Max: 120 
+  Max: 120
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false 
